[gd_scene load_steps=5 format=3]

[ext_resource path="res://Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource(2)

[node name="LeftPaddle" parent="." instance=ExtResource(1)]
position = Vector2(50, 300)

[node name="RightPaddle" parent="." instance=ExtResource(1)]
position = Vector2(750, 300)

[node name="Ball" parent="." instance=ExtResource(3)]

[node name="ScoreLabel" type="Label" parent="."]
position = Vector2(400, 20)
text = "0 : 0"
